--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.main > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 25vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.board-container {
+  display: flex;
+  justify-content: space-around;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.board {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: start;
+}
+@media screen and (max-width: 650px) {
+  .main > div {
+    margin-top: 15vh;
+    gap: 30px;
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.cell {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid blue;
+  line-height: 100%;
+}
+.miss {
+  background-color: gray;
+}
+.damage {
+  background-color: #cc0000;
+}
+.ship {
+  background-color: purple;
 }
