--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@
   gap: 20px;
 }
 @media screen and (max-width: 650px) {
-  .main > div {
-    /* margin-top: 15vh; */
+  .GamePage {
+    margin-top: 15vh;
     gap: 30px;
     flex-direction: column;
   }
@@ -34,10 +34,13 @@
   justify-content: space-around;
   margin-top: 25vh;
 }
-
+/* .Chat {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+} */
 .chat-log {
   height: 300px;
-  width: 300px;
   overflow-y: auto;
 }
 .chat-item {
@@ -75,4 +78,7 @@
 }
 .ship {
   background-color: purple;
+}
+.hidden {
+  opacity: 0;
 }
