--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,48 +1,58 @@
 .Chat {
   position: fixed;
-  right: -370px;
+  right: -320px;
   top: 50px;
   height: 80%;
-  width: 400px;
+  width: 350px;
   max-width: 100%;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border: 1px solid red;
-  padding: 20px;
-  border-radius: 25px;
+  border: 1px solid #ccc;
+  padding-left: 35px;
+  border-radius: 25px 0px 0px 25px;
   transition: right 0.3s ease-in-out;
   z-index: 5;
 }
 
 .Chat.open {
-  right: 20px;
+  right: 0px;
+}
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 15px;
+  padding: 10px;
+}
+.chat-message {
+  word-break: break-all;
 }
 
 .chat-log {
-  height: 100%;
+  height: 80%;
   overflow-y: auto;
   padding: 10px;
+  flex: 1 1 auto;
+  margin-left: 10px;
 }
 
 .chat-username,
 .chat-message {
-  width: 100%;
+  width: 50%;
 }
 
 .chat-item {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: space-between;
+  flex: 1 1 auto;
   padding-top: 10px;
 }
-
 .toggle-button {
   position: absolute;
   top: 50%;
   left: 0;
   transform: translateY(-50%);
   font-size: 20px;
-  background-color: white;
   border: none;
   padding: 5px;
   cursor: pointer;
@@ -57,7 +67,7 @@
 }
 
 .toggle-button.open {
-  right: -30px; /* Сдвигаем кнопку влево при открытом состоянии */
+  right: -30px;
 }
 
 .toggle-button::before {
@@ -73,22 +83,51 @@
 .toggle-button.open::before {
   transform: rotate(180deg);
 }
+.input-container {
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+}
+.input-container:focus {
+  border-color: red;
+}
+.input-container input,
+.input-container button {
+  height: 100%;
 
+  background-color: transparent;
+  border: 0;
+}
+.input-container input {
+  padding-left: 15px;
+  width: 70%;
+  outline: none;
+}
+.input-container button {
+  cursor: pointer;
+  width: 20%;
+  height: 100%;
+  background-color: #0000cc;
+  color: #fff;
+  border-radius: 0 15px 15px 0px;
+}
+.input-container button:hover {
+  transition: all 0.3s ease-in-out;
+  background-color: #0000ff;
+}
 @media (max-width: 767px) {
   .Chat {
-    width: 100%;
+    width: 90%;
     max-width: 100%;
-    border-radius: 0;
-    right: -100%;
-  }
-
-  .Chat.open {
-    right: 0;
+    border-radius: 25px 0px 0px 25px;
+    right: -80%;
   }
 
   .toggle-button {
     right: 10px;
-    left: auto;
   }
 
   .toggle-button.open {
