--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@ nav {
   color: #ffffff;
   padding: 20px;
 }
-
+button:hover {
+  background-color: #0056b3; /* Измененный цвет при наведении */
+}
 nav div {
   font-size: 24px;
   font-weight: bold;
@@ -34,6 +36,23 @@ nav div {
   grid-template-rows: repeat(10, 1fr);
   gap: 1px;
   align-content: start;
+}
+.btn-generate-ships {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-block: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .ActionsInfo {
