--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -32,6 +32,26 @@
   padding: 10px;
   margin-left: 10px;
   word-wrap: break-word;
+  scroll-behavior: smooth;
+  scrollbar-width: thin; /* Ширина скроллбара */
+  scrollbar-color: #007bff #f0f0f0; /* Цвет скроллбара */
+}
+
+.chat-log::-webkit-scrollbar {
+  width: 8px; /* Ширина скроллбара */
+}
+
+.chat-log::-webkit-scrollbar-track {
+  background-color: #f0f0f0; /* Цвет фона трека скроллбара */
+}
+
+.chat-log::-webkit-scrollbar-thumb {
+  background-color: #007bff; /* Цвет ползунка скроллбара */
+  border-radius: 4px; /* Радиус закругления ползунка */
+}
+
+.chat-log::-webkit-scrollbar-thumb:hover {
+  background-color: #0056b3; /* Измененный цвет ползунка при наведении */
 }
 
 .chat-item {
@@ -66,7 +86,7 @@
 .input-container button {
   flex: 1 1 auto;
   height: 100%;
-  background-color: #0000cc;
+  background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 0 15px 15px 0;
