--- a/src/App.css
+++ b/src/App.css
@@ -54,13 +54,9 @@ nav div {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-
-.ActionsInfo {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.nav-title {
+  cursor: pointer;
 }
-
 @media screen and (max-width: 767px) {
   .GamePage {
     display: flex;
