--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -33,36 +33,49 @@
   margin-left: 10px;
   word-wrap: break-word;
   scroll-behavior: smooth;
-  scrollbar-width: thin; /* Ширина скроллбара */
-  scrollbar-color: #007bff #f0f0f0; /* Цвет скроллбара */
+  scrollbar-width: thin;
+  scrollbar-color: #007bff #f0f0f0;
 }
 
 .chat-log::-webkit-scrollbar {
-  width: 8px; /* Ширина скроллбара */
+  width: 8px;
 }
 
 .chat-log::-webkit-scrollbar-track {
-  background-color: #f0f0f0; /* Цвет фона трека скроллбара */
+  background-color: #f0f0f0;
 }
 
 .chat-log::-webkit-scrollbar-thumb {
-  background-color: #007bff; /* Цвет ползунка скроллбара */
-  border-radius: 4px; /* Радиус закругления ползунка */
+  background-color: #007bff;
+  border-radius: 4px;
 }
 
 .chat-log::-webkit-scrollbar-thumb:hover {
-  background-color: #0056b3; /* Измененный цвет ползунка при наведении */
+  background-color: #0056b3;
 }
 
 .chat-item {
   display: flex;
-  justify-content: space-between;
-  padding-top: 10px;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
+  gap: 5px;
 }
-
-.chat-username,
 .chat-message {
-  width: 50%;
+  word-break: break-all;
+  width: 45%;
+}
+.chat-item.sent {
+  align-items: flex-end;
+  background-color: #eaf7ff;
+}
+.chat-item.sent .chat-message {
+  display: flex;
+  justify-content: flex-end;
+}
+.chat-item.received {
+  align-items: flex-start;
+  background-color: #f0f0f0;
 }
 
 .input-container {
@@ -137,5 +150,8 @@
   }
   .Chat.open {
     right: -77%;
+  }
+  .chat-message {
+    width: 65%;
   }
 }
