--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,90 @@
-.login {
+.App {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+nav {
+  background-color: #007bff;
+  color: #ffffff;
+  padding: 20px;
+}
+button:hover {
+  background-color: #0056b3; /* Измененный цвет при наведении */
+}
+nav div {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.main {
+  flex-grow: 1;
+  display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 .board-container {
   display: flex;
   justify-content: space-around;
 }
+
 .board {
-  width: 250px;
-  height: 250px;
-  display: flex;
-  flex-wrap: wrap;
+  min-width: 250px;
+  min-height: 250px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  gap: 1px;
   align-content: start;
 }
-.ActionsInfo {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.btn-generate-ships {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-block: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
-@media screen and (max-width: 650px) {
+.nav-title {
+  cursor: pointer;
+}
+@media screen and (max-width: 767px) {
   .GamePage {
-    margin-top: 15vh;
-    gap: 30px;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10vh;
+    gap: 30px;
   }
 }
+
 .GamePage {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 25vh;
+  gap: 20px;
 }
+
 .cell {
-  width: 25px;
-  height: 25px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid blue;
   line-height: 100%;
 }
+
 .miss,
 .damage,
 .ship {
